--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -6,6 +6,7 @@
         <td>{{car.dailyPrice}}</td>
         <td>{{car.carName}}</td>
         <td>{{car.modelYear}}</td>
+        <td>{{car.description}}</td>
       
     </tr>
 </table>
