--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,15 @@
-<!-- Welcome to {{ title }}<br />
+<div class="container">
+  <app-navi></app-navi>
+  <div class="row">
+    <div class="col-md-3">
+      <app-brand></app-brand>
+      <app-color></app-color>
+      <app-customer></app-customer>
+    </div>
+    <div class="col-md-9">
+      <app-car></app-car>
+    </div>
+  </div>
 
-Hello {{ user }}<br>
-
-{{car1.carName}}
-
-<ul>
-  <li *ngFor="let car of cars">{{car.dailyPrice}}</li>
- 
-</ul> -->
-<app-navi></app-navi>
-<app-car></app-car>
-<app-brand></app-brand>
-<app-color></app-color>
-<router-outlet></router-outlet>
+  <router-outlet></router-outlet>
+</div>
