--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -1,12 +1,27 @@
-<table class="table">
-    <tr *ngFor="let car of cars">
-        <td>{{car.carId}}</td>
-        <td>{{car.brandId}}</td>
-        <td>{{car.colorId}}</td>
-        <td>{{car.dailyPrice}}</td>
-        <td>{{car.carName}}</td>
-        <td>{{car.modelYear}}</td>
-        <td>{{car.description}}</td>
-      
+
+
+  <div *ngIf="dataLoaded==false" class="spinner-border text-primary" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+<table *ngIf="dataLoaded!=false" class="table">
+  <thead>
+    <tr>
+      <th>Car Id</th>
+      <th>Brand Id</th>
+      <th>Color Id</th>
+      <th>Car Name</th>
+      <th>Daily Price</th>
+      <th>Model Year</th>
+      <th>Description</th>
     </tr>
+  </thead>
+  <tr *ngFor="let car of cars">
+    <td>{{ car.carId }}</td>
+    <td>{{ car.brandId }}</td>
+    <td>{{ car.colorId }}</td>
+    <td>{{ car.carName }}</td>
+    <td>{{ car.dailyPrice }}</td>
+    <td>{{ car.modelYear }}</td>
+    <td>{{ car.description }}</td>
+  </tr>
 </table>
